2002-11-6 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Python wrapping process moved away from src/Makefile to
        newly created python/Makefile (as well as gdcm.i)
      * python/demo/test.py (that mirrors Test/test.cxx) is effective.
      * src/gdcmHeader::FindLength only looks for current vr when necessary.
      * src/gdcmDictSet.cxx: the dictionnaries directory path is now imported
        from the environement variable GDCM_DICT_PATH (when existing).
      * src/gdcmDict::GetTag bug fix.

2002-10-31 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Straightforward temporary fixes for swig to build the python wrappers.
        src/Makefile now has a python working entry [by working we mean
        that we can import de shadow classes without errors].

2002-10-29 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * hashtest.cxx removed (since allready in Test)
      * src/gdcmlib.h renamed to src/gdcm.h
      * src/dcm.i renamed to src/gdcm.i
      * src/Makefile prepared for python wrapping

2002-10-29 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.cxx :
        - Parsing of header is now separated from loading of element values
          (see gdcmHeader::LoadElements).
        - general clean up of hopefully all file access (creation of
          ReadInt16 and ReadInt32)

2002-10-22 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.cxx :
        - RecupLgr renamed to FindLength and cut off with new IsAnInteger
          method.
        - SetLgrElem renamed to SetLength
        - GetLgrElem renamed to GetLength
        - ~gdcmHeader() made virtual to pesky warning messages at compile.
      * src/gdcmElValSet.cxx fixed both GetElValue methods
      * Dicts/dicomV3.dic falacious entry [7fe0 0010 OT PXL Pixel Data]
        due to IdoDude was cleaned out.

2002-10-21 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.cxx RecupLgr split in FindVR and RecupLgr. FindVR